--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,6 @@ layout: default
     
 {% for category in categories %}
 <!--   <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a> -->
-  <a href="{{site.baseurl}}/categories}}">{{category}}</a>
+  <a href="{{site.baseurl}}/categories">{{category}}</a>
   {% unless forloop.last %}&nbsp;{% endunless %}
 {% endfor %}
