--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 {% endif %}
     
 {% for category in categories %}
-  <a href="{{site.baseurl}}/categories/#{{category|slugify}}">{{category}}</a>
-<!--   <a href="{{site.baseurl}}/categories">{{category}}</a> -->
+<!--   <a href="{{site.baseurl}}/categories/#{{category|slugify}}">{{category}}</a> -->
+  <a href="{{site.baseurl}}/categories">{{category}}</a>
   {% unless forloop.last %}&nbsp;{% endunless %}
 {% endfor %}
